[package]
name = "server"
version = "0.1.0"
edition = "2021"

















[dependencies]
#async-graphql = { version = "5.0.7", features = ["bson", "chrono", "dataloader", "apollo_tracing"] }
#async-graphql-actix-web = "5.0.7"
#actix-web = { version = "4.3.1" }
#async-stream = "0.3.5"
#futures = "0.3.28"
#futures-util = "0.3.28"
#mongodb = { version = "2.5.0", features = ["zstd-compression"] }
#bson = "2.6.1"
#anyhow = "1.0.70"
#thiserror = "1.0.40"
#serde = { version = "~1.0.125", features = ["derive"] }
#dotenv = "0.15.0"
#base64 = "0.21.0"